实验记录
20210323
完成inceptionv3网络训练部分的修改，开始进行实验
每Epoch 15张图片，一轮约三分钟

15/15 [==============================] - 314s 21s/step - loss: 0.9552 - categorical_accuracy: 0.6139 - top_2_accuracy: 0.8361 - lr: 0.0010
15/15 [==============================] - 315s 21s/step - loss: 0.9412 - categorical_accuracy: 0.6194 - top_2_accuracy: 0.8514 - lr: 0.0010
15/15 [==============================] - 318s 21s/step - loss: 0.9447 - categorical_accuracy: 0.6181 - top_2_accuracy: 0.8514 - lr: 0.0010
15/15 [==============================] - 319s 21s/step - loss: 0.4378 - categorical_accuracy: 0.8278 - top_2_accuracy: 0.9528 - lr: 0.0010
15/15 [==============================] - 315s 21s/step - loss: 0.4902 - categorical_accuracy: 0.8042 - top_2_accuracy: 0.9417 - lr: 0.0010
15/15 [==============================] - 319s 21s/step - loss: 0.7842 - categorical_accuracy: 0.6958 - top_2_accuracy: 0.8889 - lr: 0.0010

20210329

新建Test.py
错误：
'''
Exception ignored in: <function _RandomSeedGeneratorDeleter.__del__ at 0x7f699cd78160>
Traceback (most recent call last):
  File "/home/xh/anaconda3/lib/python3.8/site-packages/tensorflow/python/data/ops/dataset_ops.py", line 3546, in __del__
AttributeError: 'NoneType' object has no attribute 'device'
Exception ignored in: <function _RandomSeedGeneratorDeleter.__del__ at 0x7f699cd78160>
Traceback (most recent call last):
  File "/home/xh/anaconda3/lib/python3.8/site-packages/tensorflow/python/data/ops/dataset_ops.py", line 3546, in __del__
AttributeError: 'NoneType' object has no attribute 'device'
'''
解决：
https://github.com/tensorflow/tensorflow/issues/35326

错误：
(base) xh@zucc-232:/data/xh_data/9EyePACS/diabetic-retinopathy-detection/code$ python Test.py
35126 images found of 35126 total
Traceback (most recent call last):
  File "Test.py", line 51, in <module>
    from keras.utils.np_utils import to_categorical
  File "/home/xh/anaconda3/lib/python3.8/site-packages/keras/__init__.py", line 3, in <module>
    from tensorflow.keras.layers.experimental.preprocessing import RandomRotation
  File "/home/xh/anaconda3/lib/python3.8/site-packages/tensorflow/__init__.py", line 41, in <module>
    from tensorflow.python.tools import module_util as _module_util
  File "/home/xh/anaconda3/lib/python3.8/site-packages/tensorflow/python/__init__.py", line 74, in <module>
    from tensorflow.python.ops.standard_ops import *
  File "/home/xh/anaconda3/lib/python3.8/site-packages/tensorflow/python/ops/standard_ops.py", line 26, in <module>
    from tensorflow.python import autograph
  File "/home/xh/anaconda3/lib/python3.8/site-packages/tensorflow/python/autograph/__init__.py", line 35, in <module>
    from tensorflow.python.autograph import operators
  File "/home/xh/anaconda3/lib/python3.8/site-packages/tensorflow/python/autograph/operators/__init__.py", line 40, in <module>
    from tensorflow.python.autograph.operators.control_flow import for_stmt
  File "/home/xh/anaconda3/lib/python3.8/site-packages/tensorflow/python/autograph/operators/control_flow.py", line 67, in <module>
    from tensorflow.python.autograph.operators import py_builtins
  File "/home/xh/anaconda3/lib/python3.8/site-packages/tensorflow/python/autograph/operators/py_builtins.py", line 30, in <module>
    from tensorflow.python.data.ops import dataset_ops
  File "/home/xh/anaconda3/lib/python3.8/site-packages/tensorflow/python/data/__init__.py", line 25, in <module>
    from tensorflow.python.data import experimental
  File "/home/xh/anaconda3/lib/python3.8/site-packages/tensorflow/python/data/experimental/__init__.py", line 92, in <module>
    from tensorflow.python.data.experimental.ops.batching import dense_to_ragged_batch
  File "/home/xh/anaconda3/lib/python3.8/site-packages/tensorflow/python/data/experimental/ops/batching.py", line 20, in <module>
    from tensorflow.python.data.ops import dataset_ops
  File "/home/xh/anaconda3/lib/python3.8/site-packages/tensorflow/python/data/ops/dataset_ops.py", line 3548
    if self._eager_mode:
    ^
IndentationError: expected an indented block
(base) xh@zucc-232:/data/xh_data/9EyePACS/diabetic-retinopathy-detection/code$

问题
Traceback (most recent call last):
  File "/home/xh/anaconda3/lib/python3.8/site-packages/tensorflow/python/data/ops/dataset_ops.py", line 3546, in __del__
AttributeError: 'NoneType' object has no attribute 'device'

//错误：
3/3 [==============================] - ETA: 0s - loss: 1.4199 - categorical_accuracy: 0.4878 - top_2_accuracy: 0.7309 ^C
Traceback (most recent call last):
  File "inceptionv3-for-retinopathy-gpu-hr.py", line 435, in <module>
    retina_model.fit(train_gen,
  File "/home/xh/anaconda3/lib/python3.8/site-packages/tensorflow/python/keras/engine/training.py", line 66, in _method_wrapper
    return method(self, *args, **kwargs)
  File "/home/xh/anaconda3/lib/python3.8/site-packages/tensorflow/python/keras/engine/training.py", line 862, in fit
    val_logs = self.evaluate(
  File "/home/xh/anaconda3/lib/python3.8/site-packages/tensorflow/python/keras/engine/training.py", line 66, in _method_wrapper
    return method(self, *args, **kwargs)
  File "/home/xh/anaconda3/lib/python3.8/site-packages/tensorflow/python/keras/engine/training.py", line 1081, in evaluate
    tmp_logs = test_function(iterator)
  File "/home/xh/anaconda3/lib/python3.8/site-packages/tensorflow/python/eager/def_function.py", line 580, in __call__
    result = self._call(*args, **kwds)
  File "/home/xh/anaconda3/lib/python3.8/site-packages/tensorflow/python/eager/def_function.py", line 618, in _call
    results = self._stateful_fn(*args, **kwds)
  File "/home/xh/anaconda3/lib/python3.8/site-packages/tensorflow/python/eager/function.py", line 2420, in __call__
    return graph_function._filtered_call(args, kwargs)  # pylint: disable=protected-access
  File "/home/xh/anaconda3/lib/python3.8/site-packages/tensorflow/python/eager/function.py", line 1661, in _filtered_call
    return self._call_flat(
  File "/home/xh/anaconda3/lib/python3.8/site-packages/tensorflow/python/eager/function.py", line 1745, in _call_flat
    return self._build_call_outputs(self._inference_function.call(
  File "/home/xh/anaconda3/lib/python3.8/site-packages/tensorflow/python/eager/function.py", line 593, in call
    outputs = execute.execute(
  File "/home/xh/anaconda3/lib/python3.8/site-packages/tensorflow/python/eager/execute.py", line 59, in quick_execute
    tensors = pywrap_tfe.TFE_Py_Execute(ctx._handle, device_name, op_name,
KeyboardInterrupt
2021-03-30 13:35:55.646471: W tensorflow/core/kernels/data/generator_dataset_op.cc:103] Error occurred when finalizing GeneratorDataset iterator: Failed precondition: Python interpreter state is not initialized. The process may be terminated.
	 [[{{node PyFunc}}]]
2021-03-30 13:35:55.646793: W tensorflow/core/kernels/data/generator_dataset_op.cc:103] Error occurred when finalizing GeneratorDataset iterator: Failed precondition: Python interpreter state is not initialized. The process may be terminated.
	 [[{{node PyFunc}}]]


20210401
299/299 [==============================] - 530s 2s/step
Accuracy on Test Data: 0.34%
              precision    recall  f1-score   support

           0       0.82      0.35      0.49      6627
           1       0.11      0.27      0.16       882
           2       0.17      0.28      0.21      1557
           3       0.11      0.60      0.18       260
           4       0.23      0.55      0.32       226

    accuracy                           0.34      9552
   macro avg       0.29      0.41      0.27      9552
weighted avg       0.61      0.34      0.40      9552